# mistral

./: .gitignore  LICENSE  README.md  build.sh  mistral.cabal
docs/: Mistral.md  Tutorial.md
examples/: PingPong.mst
mistral/: Main.hs  OptParser.hs
src/Mistral/: Driver.hs  ModuleSystem.hs  Parser.hs  Simple.hs  TypeCheck.hs  Version.hs
src/Mistral/CodeGen/: DeadCode.hs  LambdaLift.hs  Link.hs  ResolveTags.hs  Specialize.hs
src/Mistral/Driver/: Monad.hs
src/Mistral/ModuleSystem/: Export.hs  Interface.hs  Name.hs  NameMap.hs  Prelude.hs  Rename.hs
src/Mistral/Parser/: AST.hs  Finalize.hs  Layout.hs  Lexer.x  LexerCore.hs  Parser.y  ParserCore.hs  Unlit.hs
src/Mistral/Schedule/: Interp.hs  Monad.hs  Static.hs  Value.hs
src/Mistral/Semantics/: SimpleInterp.hs
src/Mistral/TypeCheck/: AST.hs  Env.hs  Infer.hs  Interface.hs  Monad.hs  Patterns.hs  Solver.hs  TcData.hs  Translate.hs  Unify.hs
src/Mistral/Utils/: Lens.hs  Misc.hs  Names.hs  PP.hs  Panic.hs  SCC.hs  Source.hs
tests/: Discover.hs  Main.hs  Options.hs  run-tests.sh
tests/syntax/: clean.mst  duplicate-signatures.mst  duplicate-signatures.mst.stderr  no-bind.mst  no-bind.mst.stderr
